[feature] added Jwt authentication on login

--- a/src/MedAdvisor.Api/appsettings.json
+++ b/src/MedAdvisor.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings" : {
+    "JWTToken" : "Some secured Token here"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
