--- a/test/MedAdvisor.API.Test/MedAdvisor.API.Test.csproj
+++ b/test/MedAdvisor.API.Test/MedAdvisor.API.Test.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FakeitEasy" Version="7.3.1" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
