Co-authored-by: Henok Matheas Kebede <Henok-Matheas@users.noreply.github.com>

--- a/src/MedAdvisor.Api/MedAdvisor.Api.csproj
+++ b/src/MedAdvisor.Api/MedAdvisor.Api.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
   </ItemGroup>
 
+  <ItemGroup>
+		<ProjectReference Include="..\MedAdvisor.DataAccess.MySql\MedAdvisor.DataAccess.MySql.csproj" />
+		<ProjectReference Include="..\MedAdvisor.Models\MedAdvisor.Models.csproj" />
+	</ItemGroup>
+
 </Project>
