--- a/src/MedAdvisor.DataAccess.MySql/MedAdvisor.DataAccess.MySql.csproj
+++ b/src/MedAdvisor.DataAccess.MySql/MedAdvisor.DataAccess.MySql.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+		<ProjectReference Include="..\MedAdvisor.Models\MedAdvisor.Models.csproj" />
+	</ItemGroup>
+
 </Project>
