Document crud started

--- a/src/MedAdvisor.Api/appsettings.json
+++ b/src/MedAdvisor.Api/appsettings.json
@@ -2,6 +2,11 @@
   "AppSettings" : {
     "JWTToken" : "Some secured Token here"
   },
+  "CloudinarySettings": {
+    "CloudName": "dujpujpzk",
+    "ApiKey": "935925156256877",
+    "ApiSecret": "0p2086y4v1UGju29GhXJlDTQgQ0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
